<?xml version="1.0" encoding="UTF-8"?>
<!-- +====================================================================== -->
<!--   $Source$ -->
<!-- -->
<!--   Project:   ezTangORB -->
<!-- -->
<!--   Description:  java source code for the simplified TangORB API. -->
<!-- -->
<!--   $Author: Igor Khokhriakov <igor.khokhriakov@hzg.de> $ -->
<!-- -->
<!--   Copyright (C) :      2014 -->
<!--                        Helmholtz-Zentrum Geesthacht -->
<!--                        Max-Planck-Strasse, 1, Geesthacht 21502 -->
<!--                        GERMANY -->
<!--                        http://hzg.de -->
<!-- -->
<!--   This file is part of Tango. -->
<!-- -->
<!--   Tango is free software: you can redistribute it and/or modify -->
<!--   it under the terms of the GNU Lesser General Public License as published by -->
<!--   the Free Software Foundation, either version 3 of the License, or -->
<!--   (at your option) any later version. -->
<!-- -->
<!--   Tango is distributed in the hope that it will be useful, -->
<!--   but WITHOUT ANY WARRANTY; without even the implied warranty of -->
<!--   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the -->
<!--   GNU Lesser General Public License for more details. -->
<!-- -->
<!--   You should have received a copy of the GNU Lesser General Public License -->
<!--   along with Tango.  If not, see <http://www.gnu.org/licenses/>. -->
<!-- -->
<!--  $Revision: 25721 $ -->
<!-- -->
<!-- -====================================================================== -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tango</groupId>
    <artifactId>ezTangORB</artifactId>
    <version>1.1.16</version>
    <packaging>jar</packaging>
    <description>Library that facades standard TangORB</description>

    <developers>
        <developer>
            <id>khokhria</id>
            <name>Igor Khokhriakov</name>
            <email>igor.khokhriakov@hzg.de</email>
            <organization>Helmholtz-Zentrum Geesthacht</organization>
            <organizationUrl>hzg.de</organizationUrl>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.sun.media</groupId>
            <artifactId>jai_imageio</artifactId>
            <version>1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.tango</groupId>
            <artifactId>TangORB</artifactId>
            <version>9.1.1.hzg</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <argLine>-Xmx2G -XX:MaxPermSize=512M</argLine>
                    <excludes>
                        <exclude>**/IT*</exclude>
                        <exclude>**/*$*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>

                            <includes>
                                <include>**/IT*</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                    <fork>true</fork>
                    <meminitial>512m</meminitial>
                    <maxmem>2048m</maxmem>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>generate-test-sources</id>
                        <!--<phase>package</phase>-->
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/test-integration/java</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-test-resources</id>
                        <!--<phase>package</phase>-->
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>add-test-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>src/test-integration/resources</directory>
                                </resource>
                                <resource>
                                    <directory>src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
